--- a/_posts/2018-06-02-rex.md
+++ b/_posts/2018-06-02-rex.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: servlet
+title: 正则表达式
 categories: [技术]
-description: servlet
-keywords: java web, servlet
+description: regular expression
+keywords: 正则表达式
 ---
 
 # 引言
