--- a/_posts/2018-06-01-jdbc.md
+++ b/_posts/2018-06-01-jdbc.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: jdbc
-categories: [技术]
-description: jdbc
+title: JDBC
+categories: [Java]
+description: JDBC
 keywords: java, jdbc
 ---
 
