--- a/_posts/2018-06-02-servlet.md
+++ b/_posts/2018-06-02-servlet.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: servlet
-categories: [技术]
+title: Servlet
+categories: [Java]
 description: servlet
 keywords: java web, servlet
 ---
