--- a/_posts/2018/06/03/2018-06-03-jstl-el.md
+++ b/_posts/2018/06/03/2018-06-03-jstl-el.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: JSTL表达式与EL表达式
-categories: [Java]
+categories: [java]
 description: JSTL表达式与EL表达式
 keywords: JSTL, EL
 ---
