修改历史博客图片后缀

--- a/_posts/2018/06/02/2018-06-02-servlet.md
+++ b/_posts/2018/06/02/2018-06-02-servlet.md
@@ -48,7 +48,7 @@ keywords: java web, servlet
 　　`service()`方法：`Dispatches client requests to the protected service method`　
 　　`destroy()`方法：`Called by the servlet container to indicate to a servlet that the servlet is being taken out of service.`
 3. `Servlet`生命周期的各个阶段
-![Servlet生命周期]({{ site.url }}/images{{ page.url }}/20151029190820743)
+![Servlet生命周期]({{ site.url }}/images{{ page.url }}/20151029190820743.jpg)
 >(1) 载入：`Servlet`容器创建`Servlet`实例  
 >(2) 初始化：调用`init()`方法  
 >(3) 服务：如果有请求，调用`service()`方法  
