--- a/_posts/2018/06/03/2018-06-03-jsp.md
+++ b/_posts/2018/06/03/2018-06-03-jsp.md
@@ -19,7 +19,7 @@ servlet容器编译servlet源文件，生成servlet类
 调用与JSP对应的servlet实例的服务方法
 4. 销毁阶段：
 调用与JSP对应的servlet实例的销毁方法，然后销毁servlet实例
-![JSP的生命周期]({{ site.url }}/images{{ page.url }}/20151104085803887)
+![JSP的生命周期]({{ site.url }}/images{{ page.url }}/20151104085803887.jpg)
 
 JSP生命周期代码实例如下所示：
 
