链接新标签打开

--- a/_posts/2019/01/23/2019-01-23-pwa.md
+++ b/_posts/2019/01/23/2019-01-23-pwa.md
@@ -19,8 +19,8 @@ PWA（Progressive Web App）是一种理念，使用多种技术来增强 web ap
 
 ## 2.2 配置步骤
 下面记录下我配置的步骤。  
-+ 首先 PWA 需要一个描述文件 `manifest.json`，具体配置可以参考这个[文档](https://developer.mozilla.org/zh-CN/docs/Web/Manifest),也可以参考我的配置 [manifest.json]({{site.url}}/manifest.json)。  
-+ 在你的 html 文件中声明出来（因为我用的 jekyll，所以我在 [_includes/header.html](https://github.com/sunbufu/sunbufu.github.io/blob/master/_includes/header.html) 文件中声明）。  
++ 首先 PWA 需要一个描述文件 `manifest.json`，具体配置可以参考这个[文档](https://developer.mozilla.org/zh-CN/docs/Web/Manifest){:target="_blank"},也可以参考我的配置 [manifest.json]({{site.url}}/manifest.json){:target="_blank"}。  
++ 在你的 html 文件中声明出来（因为我用的 jekyll，所以我在 [_includes/header.html](https://github.com/sunbufu/sunbufu.github.io/blob/master/_includes/header.html){:target="_blank"} 文件中声明）。  
 
 ```html
 <head>
@@ -29,9 +29,9 @@ PWA（Progressive Web App）是一种理念，使用多种技术来增强 web ap
 ...
 </head>
 ```
-+ 然后我们需要一个 service-worker 文件来处理 PWA 的额外功能，例如缓存。可以参考这个[文档](https://developer.mozilla.org/zh-CN/docs/Web/API/Service_Worker_API/Using_Service_Workers)，也可以参考我的代码 [manifest.json](https://github.com/sunbufu/sunbufu.github.io/blob/master/service-worker.js)。
++ 然后我们需要一个 service-worker 文件来处理 PWA 的额外功能，例如缓存。可以参考这个[文档](https://developer.mozilla.org/zh-CN/docs/Web/API/Service_Worker_API/Using_Service_Workers){:target="_blank"}，也可以参考我的代码 [manifest.json](https://github.com/sunbufu/sunbufu.github.io/blob/master/service-worker.js){:target="_blank"}。
 其中缓存对应着一个版本号，因为我不想每次提交都重新修改下版本，比较麻烦。所以在这里我直接使用了 jekyll 的变量 `site.time` 把构建的时间作为版本号。  
-+ 最后我们需要在 html 文件中注册这个 service-worker 文件，也可以参照我的文件[_includes/footer.html](https://github.com/sunbufu/sunbufu.github.io/blob/master/_includes/footer.html)，如下所示。
++ 最后我们需要在 html 文件中注册这个 service-worker 文件，也可以参照我的文件[_includes/footer.html](https://github.com/sunbufu/sunbufu.github.io/blob/master/_includes/footer.html){:target="_blank"}，如下所示。
 
 ```javascript
 // 检测浏览器是否支持SW
@@ -44,7 +44,7 @@ if(navigator.serviceWorker != null){
     console.log('不支持sw')
 }
 ```
-+ 然后我新建了离线提示的页面，用于离线的时候用户访问未缓存页面时做提示用。因为这个提示的布局跟其它页面稍有不同，我创建了[提示布局](https://github.com/sunbufu/sunbufu.github.io/blob/master/_layouts/tips.html)。引用次布局，实现[离线提示页面](https://github.com/sunbufu/sunbufu.github.io/blob/master/pages/offline.md)。
++ 然后我新建了离线提示的页面，用于离线的时候用户访问未缓存页面时做提示用。因为这个提示的布局跟其它页面稍有不同，我创建了[提示布局](https://github.com/sunbufu/sunbufu.github.io/blob/master/_layouts/tips.html){:target="_blank"}。引用次布局，实现[离线提示页面](https://github.com/sunbufu/sunbufu.github.io/blob/master/pages/offline.md){:target="_blank"}。
 + 至此已经全部完成了，如果你使用的 chrome 浏览器，你可以在这里看到你的 service-worker 信息和缓存信息。
 ![application]({{ site.url }}/images{{ page.url }}/application.png)
 
