--- a/_posts/2020/09/13/2020-09-13-sunday.md
+++ b/_posts/2020/09/13/2020-09-13-sunday.md
@@ -8,7 +8,7 @@ keywords: 工作感触, 思考, 随笔
 
 好长时间没有更新博客了，没有写点东西了，趁有点时间，随便写写近来生活和工作的感触吧。想到哪里写到哪里，也挺好的。
 
-今天心情不错，算是入职头条以来难得的一个好周日，头条是大小周，每两周才有这么一次休息的周日。加上孙彩云难得不在家，所以更是显得格外可贵。虽然窗外一直传来汽车的鸣笛和隔壁小区施工的噪声，但却不没怎么感觉到吵闹，也有不知名的小鸟站在邻居空调的外置机上，喳喳喳喳，也听不懂他们在说些什么，反正看起来很热闹，倒是家里的小猫咪有点按耐不住，想跟他们谈谈鸟生或者猫生。
+今天心情不错，算是入职头条以来难得的一个好周日，头条是大小周，每两周才有这么一次休息的周日。加上孙彩云难得不在家，所以更是显得格外可贵。虽然窗外一直传来汽车的鸣笛和隔壁小区施工的噪声，但却不怎么感觉到吵闹，也有不知名的小鸟站在邻居空调的外置机上，喳喳喳喳，也听不懂他们在说些什么，反正看起来很热闹，倒是家里的小猫咪有点按耐不住，想跟他们谈谈鸟生或者猫生。
 
 恰逢夏秋交接，天气逐渐的转凉了，晚上打开窗户，不盖被子的时候都会被冻醒。但是白天更是一种享受，温度不冷不热，阳光从窗户斜斜的照进来，刚好可以在我一扭头可以看到的地方，提醒我外面的生活也很美好。我也想出去走走，但是孙彩云不在，一个人逛悠起来也没啥意思。跟着自己的思路随便想想，不去考虑那些工作上的压力，不去追逐生活中的烦恼，挺好。我起身去拉上了窗帘，窗户上的阳光映的电脑屏幕都快看不见了，一扭头小猫咪躺在我椅子后面的地板上，哼，这么粘人。
 
